<resources>
    <string name="app_name">WowLucky</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_wow_loot">WELCOME TO WOW LOOT!</string>
    <string name="no_ads_only_the_toughest_loot">No ads, only the toughest loot.</string>
    <string name="get_started">GET STARTED</string>
    <string name="skip">SKIP</string>
    <string name="monthly_games">MONTHLY GAMES!</string>
    <string name="join_us_in_monthly_gaming_events_that_will_keep_you_on_the_edge_of_your_seat_compete_with_other_gamers">Join us in monthly gaming events that will keep you on the edge of your seat! Compete with other gamers.</string>
    <string name="continues">CONTINUE</string>
    <string name="take_8_balls_get_1_life">take 8 balls, get 1 Life!</string>
    <string name="each_time_you_successfully_collect_8_artworks_you_earn_a_life_unlocking_new_opportunities_in_the_game">Each time you successfully collect 8 artworks, you earn a life, unlocking new opportunities in the game.</string>
    <string name="join_it_s_all_yours">JOIN, IT\'S ALL YOURS</string>
    <string name="sign_up_with_email">SIGN UP WITH EMAIL</string>
    <string name="sign_up_with_google">SIGN UP WITH GOOGLE</string>
    <string name="by_registering_i_confirm_that_i_have_read_and_agree_to_general_terms_and_conditions_data_protection_policy_price_list">By registering, I confirm that I have read and agree to: General terms and conditions, Data protection policy, Price list</string>
    <string name="have_an_account">HAVE AN ACCOUNT? LOG IN</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="what_s_your_name">What\'s your name</string>
    <string name="what_s_your_email">What\'s your email</string>
    <string name="enter_your_password_here">Enter your password here</string>
    <string name="continue_with_email">CONTINUE WITH EMAIL</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_confirmation_code">Enter Confirmation Code</string>
    <string name="enter_the_6_digit_login_code_we_sent_to_mariam_khachatryan_gmail_com">Enter the 6-digit login code we sent to mariam.khachatryan@gmail.com</string>
    <string name="request_a_new_one">Request a new one</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_new_password_has_been_saved">Your new password has been saved!</string>
    <string name="you_can_now_log_in_using_your_new_password">You can now log in using your new password.</string>
    <string name="continue_to_login">CONTINUE TO LOGIN</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="total_game_pot">Total Game Pot</string>
    <string name="personal_balanc">Personal Balancе</string>
    <string name="collected_items">Collected Items</string>
    <string name="game_start">Game Start</string>
    <string name="gauge_fill">Gauge Fill</string>
    <string name="progress">Progress</string>
    <string name="news">News</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_lorem_ipsum_dolor_sit_amet">Lorem ipsum dolor sit amet consectetur.Lorem ipsum dolor sit amet.</string>
    <string name="game">Game</string>
    <string name="game_n_21_round_1">GAME N 21 ROUND 1</string>
    <string name="choose_an_unpopular_picture">CHOOSE AN UNPOPULAR PICTURE</string>
    <string name="players">Players</string>
    <string name="lorem_ipsum_dolor">lorem ipsum dolor</string>
    <string name="_24_players_choose">24 players choose</string>
    <string name="you_win">YOU WIN!</string>
    <string name="next_round_starts">NEXT ROUND STARTS</string>
    <string name="go_to_home_page">GO TO HOME PAGE</string>
    <string name="you_lose">YOU LOSE!</string>
    <string name="notification">Notification</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="when_you_get_notifications_they_ll_show_up_here">When you get notifications, they’ll show up here</string>
    <string name="take_your_picture">Take your picture</string>
    <string name="collect_8_pictures_during_a_month_and_get_1_life">Collect 8 pictures during a month and get 1 life</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="you_ve_gained_access_to_the_game">You\'ve gained access to the game!</string>
    <string name="start_playing">START PLAYING</string>
    <string name="referral">Referral</string>
    <string name="get_50_of_your_referrals_winnings">Get 50% of your referrals winnings!</string>
    <string name="get_50_of_your_referrals_winnings_also_get_1_extra_life_in_each_game_if_you_have_active_referrals_in_the_game_just_invite_them_to_join_wow_lucky">Get 50% of your referrals winnings! Also get 1 extra life in each game if you have active referrals in the game.Just invite them to join wow lucky!</string>
    <string name="how_it_works">How It Works?</string>
    <string name="share_your_promo_code_with_a_friend">Share your promo code with a friend.</string>
    <string name="friend_immediately_gains_1_life">Friend immediately gains 1 life.</string>
    <string name="you_get_half_the_winnings_from_the_each_friend_if_they_are_lucky_the_more_friends_the_more_chance_to_win">You get half the winnings from the each friend if they are lucky! The more friends, the more chance to win!</string>
    <string name="join_invite_and_win_click_to_copy_and_share_with_friends">Join, invite and win! Click to copy and share with friends!</string>
    <string name="this_is_your_promocode">This is your promocode</string>
    <string name="are_you_a_blogger">Are You A Blogger?</string>
    <string name="share_your_promo_code_with_a_friend_friend_immediately_gains_1_life_you_get_half_the_winnings_from_each_friend_if_they_are_lucky_the_more_friends_the_more_chance_to_win_join_invite_and_win_click_to_copy_and_share_with_friends">Share your promo code with a friend. Friend immediately gains 1 life .You get half the winnings from each friend if they are lucky! The more friends, the more chance to win! Join, invite and win! Click to copy and share with friends!</string>
    <string name="winning_referrals">Winning Referrals</string>
    <string name="active">Active</string>
    <string name="enter_referral_code">Enter Referral code</string>
    <string name="enter_the_referral_code_and_get_bonuses_to_the_game">ENTER THE REFERRAL CODE AND GET BONUSES TO THE GAME</string>
    <string name="referral_code">Referral code</string>
    <string name="don_t_have_referral_code">DON’T HAVE REFERRAL CODE</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="to_find_answers_to_common_questions_open_the_faq">To find answers to common questions, open the FAQ</string>
    <string name="chat">CHAT</string>
    <string name="to_get_advice_from_our_bank_s_support_service_open_the_chat">To get advice from our bank’s support service, open the chat</string>
    <string name="chat1">Chat</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="your_message">Your message...</string>
    <string name="select_image">Select Image</string>
    <string name="select_file">Select File</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="gaming_transactions">Gaming Transactions</string>
    <string name="no_operations">No operations</string>
    <string name="try_to_change_the_filter_options">Try to change the filter options</string>
    <string name="numb">#</string>
    <string name="win">Win</string>
    <string name="player">Player</string>
    <string name="you_win1">You win</string>
    <string name="withdrawals">Withdrawals</string>
    <string name="get_your_favorite_steam_gift_cards_and_unlock_endless_gaming_adventures">Get your favorite Steam gift cards and unlock endless gaming adventures.</string>
    <string name="get_started1">Get Started</string>
    <string name="level_up_your_gaming_experience_with_exclusive_skins_for_pubg_and_cs">Level up your gaming experience with exclusive skins for PUBG and CS!</string>
    <string name="join_our_community_on_discord_and_telegram">Join our community on Discord and Telegram!</string>
    <string name="discord">Discord</string>
    <string name="notifications">Notifications</string>
    <string name="system_notifications">System notifications</string>
    <string name="receive_notifications_about_latest_news_amp_system_updates_from_us"><![CDATA[Receive notifications about latest news & system updates from us.]]></string>
    <string name="turn_off_the_sound">Turn off the sound</string>
    <string name="filtration">Filtration</string>
    <string name="clear">Clear</string>
    <string name="period">Period</string>
    <string name="choose_date">Choose date</string>
    <string name="type">Type</string>
    <string name="lose">Lose</string>
    <string name="win1">Win</string>
    <string name="show_results">SHOW RESULTS</string>
    <string name="my_profile">My Profile</string>
    <string name="earnings_enabled">Earnings Enabled</string>
    <string name="earnings_are_enabled_and_if_you_close_the_app_it_won_t_stop_just_make_sure_the_on_button_is_activated">Earnings are enabled, and if you close the app, it won’t stop. Just make sure the ON button is activated!</string>
    <string name="important_for_stable_earnings_it_s_highly_recommended_to_disable_battery_optimization_you_can_read_more_detailed_instructions_in_the_manual">Important! For stable earnings, it\'s highly recommended to disable battery optimization. You can read more detailed instructions in the manual.</string>
    <string name="disable_optimization">DISABLE OPTIMIZATION</string>
    <string name="proxy_settings">Proxy Settings</string>
    <string name="price_unit_of_measurement">Price unit of measurement:</string>
    <string name="_1_gb">1 GB</string>
    <string name="_100mb">100MB</string>
    <string name="price_per_1_gb">Price per 1 GB:</string>
    <string name="_3_072_cpc_mobile_traffic">3.072 CPC – Mobile traffic</string>
    <string name="_1_536_cpc_wi_fi_traffic">1.536 CPC – Wi-Fi traffic</string>
    <string name="only_mobile_traffic_is_counted_vpns_and_emulators_are_prohibited_earnings_will_not_be_credited_and_these_actions_will_lead_to_account_suspension">Only mobile traffic is counted; VPNs and emulators are prohibited. Earnings will not be credited, and these actions will lead to account suspension</string>
    <string name="referral1">Referral</string>
    <string name="media_amp_groups"><![CDATA[Media & groups]]></string>
    <string name="contact_support">Contact Support</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="spain">Spain</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="balance_types">Balance Types</string>
    <string name="balance">Balance:</string>
    <string name="gaming_balance">Gaming Balance:</string>
    <string name="proxy_balance">Proxy balance:</string>
    <string name="ok">OK</string>
    <string name="the_game_has_already_started">The Game has already started!</string>
    <string name="you_didn_t_have_time_come_back_after_the_end">you didn’t have time. Come back after the end.</string>
    <string name="you_choose_this_picture">YOU CHOOSE THIS PICTURE</string>
    <string name="group_discussions">GROUP DISCUSSIONS</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
</resources>