<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp"
    tools:context=".registrate.CreateAccountFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_marginTop="@dimen/_5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:textColor="#F8FAFF"
        android:textSize="@dimen/_26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:textSize="@dimen/_16sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"/>
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/agrandir"
            android:textColor="#F8FAFF"
            android:hint="@string/what_s_your_name"
            android:textColorHint="#646464"
            android:textSize="@dimen/_16sp"
            android:paddingStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47dp"
            android:background="@drawable/input"/>
        <TextView
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_16sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/agrandir"
            android:id="@+id/etEmail"
            android:textColor="#F8FAFF"
            android:hint="@string/what_s_your_email"
            android:textColorHint="#646464"
            android:textSize="@dimen/_16sp"
            android:paddingStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47dp"
            android:background="@drawable/input"/>
        <TextView
            android:id="@+id/tvError"
            android:visibility="gone"
            android:textSize="@dimen/_12sp"
            android:textColor="#DB5050"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_email_address"/>
        <TextView
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_16sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/agrandir"
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:textColor="#F8FAFF"
                android:hint="@string/enter_your_password_here"
                android:textColorHint="#646464"
                android:textSize="@dimen/_16sp"
                android:paddingStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47dp"
                android:background="@drawable/input"/>
            <ImageButton
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/_8dp"
                android:id="@+id/btnPassVisible"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="@dimen/_24dp"
                android:src="@drawable/close_eye" />
        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/frameLayout3"
        android:layout_marginBottom="@dimen/_30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/ivContinue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame_62"/>
        <com.google.android.material.button.MaterialButton
            android:textStyle="bold"
            android:clickable="false"
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continues"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"/>
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>