<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:padding="@dimen/_16dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_back"
        android:textColor="#F8FAFF"
        android:textSize="@dimen/_26sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/tvEmail"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_16sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>
        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/agrandir"
            android:id="@+id/etEmail"
            android:textColor="#F8FAFF"
            android:hint="@string/what_s_your_email"
            android:textColorHint="#646464"
            android:textSize="@dimen/_16sp"
            android:paddingStart="@dimen/_20dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_47dp"
            android:background="@drawable/input"/>
        <TextView
            android:id="@+id/tvError"
            android:visibility="gone"
            android:textSize="@dimen/_12sp"
            android:textColor="#DB5050"
            android:layout_marginTop="@dimen/_6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_valid_email_address"/>
        <TextView
            android:id="@+id/tvPassword"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_16sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:fontFamily="@font/agrandir"
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_47dp"
                android:layout_marginTop="@dimen/_10dp"
                android:background="@drawable/input"
                android:hint="@string/enter_your_password_here"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_20dp"
                android:textColor="#F8FAFF"
                android:textColorHint="#646464"
                android:textSize="@dimen/_16sp" />

            <ImageButton
                android:layout_marginTop="@dimen/_8dp"
                android:id="@+id/btnPassVisible"
                android:layout_width="@dimen/_24dp"
                android:layout_height="@dimen/_24dp"
                android:layout_gravity="center|end"
                android:layout_marginEnd="@dimen/_24dp"
                android:src="@drawable/close_eye"
                android:background="@android:color/transparent" />
        </FrameLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clRememberMe"
            android:layout_marginTop="@dimen/_22dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_marginTop="@dimen/_3dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/checkbox"
                android:checked="false"
                android:theme="@style/Theme.AppCompat"
                android:layout_width="@dimen/_18dp"
                android:layout_height="@dimen/_18dp"
                android:button="@drawable/checkbox_registrate_style"/>
            <TextView
                android:id="@+id/tvRemember"
                android:textSize="@dimen/_18sp"
                android:textColor="#F8FAFF"
                android:layout_marginStart="@dimen/_8dp"
                app:layout_constraintStart_toEndOf="@id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"/>
            <TextView
                android:id="@+id/tvForgotPassword"
                android:textSize="@dimen/_18sp"
                android:textColor="#AE88FF"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <FrameLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/frameLayout3"
        android:layout_marginBottom="@dimen/_30dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:id="@+id/ivContinue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/frame_62"/>
        <com.google.android.material.button.MaterialButton
            android:textStyle="bold"
            android:enabled="false"
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/continues"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sp"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>