<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/_16dp"
    tools:context=".support.SupportFragment">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvSupportMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support"
        android:textColor="#F8FAFF"
        android:textSize="@dimen/_28sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:background="@drawable/frame_162852"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSupportMain"
        android:padding="@dimen/_16dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_gravity="top|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/faq_icon"/>
        <TextView
            android:layout_marginTop="@dimen/_15dp"
            android:layout_gravity="center"
            android:textSize="@dimen/_18sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faq"/>
        <TextView
            android:layout_marginTop="@dimen/_45dp"
            android:layout_gravity="center"
            android:textSize="@dimen/_14sp"
            android:textColor="#646464"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_find_answers_to_common_questions_open_the_faq"/>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/frameLayout2"
        android:background="@drawable/frame_162852"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frameLayout1"
        android:padding="@dimen/_16dp"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_gravity="top|center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chat_icon"/>
        <TextView
            android:layout_marginTop="@dimen/_15dp"
            android:layout_gravity="center"
            android:textSize="@dimen/_18sp"
            android:textColor="#F8FAFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chat"/>
        <TextView
            android:layout_marginTop="@dimen/_45dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/_14sp"
            android:textColor="#646464"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_get_advice_from_our_bank_s_support_service_open_the_chat"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>